@@ -33,11 +33,11 @@ public class CordaCaplet extends Capsule {
 
     private Config parseConfigFile(List<String> args) {
         this.baseDir = getBaseDirectory(args);
-        String config = getOption(args, "--config-file");
-        File configFile = (config == null) ? new File(baseDir, "node.conf") : new File(config);
+
+        File configFile = getConfigFile(args, baseDir);
         try {
             ConfigParseOptions parseOptions = ConfigParseOptions.defaults().setAllowMissing(false);
-            Config defaultConfig = ConfigFactory.parseResources("reference.conf", parseOptions);
+            Config defaultConfig = ConfigFactory.parseResources("corda-reference.conf", parseOptions);
             Config baseDirectoryConfig = ConfigFactory.parseMap(Collections.singletonMap("baseDirectory", baseDir));
             Config nodeConfig = ConfigFactory.parseFile(configFile, parseOptions);
             return baseDirectoryConfig.withFallback(nodeConfig).withFallback(defaultConfig).resolve();
@@ -173,6 +173,27 @@ public class CordaCaplet extends Capsule {
         }
     }
 
+    // Capsule does not handle multiple instances of same option hence we add in the args here to process builder
+    // For multiple instances Capsule jvm args handling works on basis that one overrides the other.
+    @Override
+    protected int launch(ProcessBuilder pb) throws IOException, InterruptedException {
+        if (isAtLeastJavaVersion11()) {
+            List<String> args = pb.command();
+            List<String> myArgs = Arrays.asList(
+                "--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.time=ALL-UNNAMED",
+                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio=ALL-UNNAMED");
+            args.addAll(1, myArgs);
+            pb.command(args);
+        }
+        return super.launch(pb);
+    }
+
     /**
      * Overriding the Caplet classpath generation via the intended interface in Capsule.
      */
@@ -227,6 +248,9 @@ public class CordaCaplet extends Capsule {
                 jvmArgs.add("-XX:+HeapDumpOnOutOfMemoryError");
                 jvmArgs.add("-XX:+CrashOnOutOfMemoryError");
             }
+            if (isAtLeastJavaVersion11()) {
+                jvmArgs.add("-Dnashorn.args=--no-deprecation-warning");
+            }
             return (T) jvmArgs;
         } else if (ATTR_SYSTEM_PROPERTIES == attr) {
             // Add system properties, if specified, from the config.
@@ -269,6 +293,14 @@ public class CordaCaplet extends Capsule {
             System.err.printf("Error: Unsupported Java version %s; currently only version 1.8 or 11 is supported.\n", version);
             System.exit(1);
         }
+    }
+
+    private static boolean isAtLeastJavaVersion11() {
+        String version = System.getProperty("java.specification.version");
+        if (version != null) {
+            return Float.parseFloat(version) >= 11f;
+        }
+        return false;
     }
 
     private Boolean checkIfCordappDirExists(File dir) {
